[package]
name = "mapreduce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
tonic = "0.7"  # grpc impl for rust
prost = "0.10"  # protobuf impl for rust
tokio = { version = "1.29.1", features = ["rt-multi-thread"] }
mongodb = "2.6.0"
mongo_utils = { path = "mongo_utils" }

[build-dependencies]
prost-build = "0.10"
tonic-build = "0.7"

[dev-dependencies]
